2015-03-04 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Start versioning: 1.0